--- a/index.html
+++ b/index.html
@@ -1,50 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        table {
-            width: 50%;
-            border-collapse: collapse;
-            margin: 80px;
-        }
-
-
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Tap Academy Projects</title>
+  <link rel="stylesheet" href="cover.css">
 </head>
 <body>
-    <div>
-        <table border="2px" cellpadding="10px" cellspacing="0" style="margin: 0 auto;">
-            <tr>
-                <th>Projects</th>
-                <th>Links</th>
-            </tr>
-        <tr>
-            <td>Blog Website</td>
-            <td><a href="/Blog Page/index.html">View Blog</a></td>
-        </tr>
-        <tr>
-            <td>Portfolio Website</td>
-            <td><a href="/Portfolio/index.html">View Portfolio</a></td>
-        </tr>
-        <tr>
-            <td>
-                Login Page
-            </td>
-            <td><a href="/Login/index.html">View Login Page</a></td>
-        </tr>
-        <tr>
-            <td>Time Table</td>
-            <td><a href="/Timetable/index.html">View Time Table</a></td>
-        </tr>
-        </table>
+  <!-- Header -->
+  <header>
+    <h1>My Mini Projects</h1>
+    <p>Showcasing my work at Tap Academy</p>
+  </header>
+
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>Project 1: Blog Webpage</h3>
+      <p>A simple blog page built completely with HTML.</p>
+      <a href="Blog Page/index.html" target="_blank">View Project</a>
     </div>
+
+    <div class="project-card">
+      <h3>Project 2: Portfolio Website</h3>
+      <p>A personal portfolio built with HTML.</p>
+      <a href="Portfolio/index.html" target="_blank">View Project</a>
+    </div>
+     <div class="project-card">
+      <h3>Project 3: Login Page</h3>
+      <p>A login page done with HTML and CSS.</p>
+      <a href="Login/index.html" target="_blank">View Project</a>
+    </div>
+     <div class="project-card">
+      <h3>Project 4: Timetable</h3>
+      <p>A simple timetable application built with HTML and CSS.</p>
+      <a href="Timetable/index.html" target="_blank">View Project</a>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am a fullstack web development intern at Tap Academy, passionate about building interactive and user-friendly web applications.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: asbinthomas15@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/asbin72" target="_blank">View Profile</a></p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2026 My Tap Academy Projects</p>
+  </footer>
 </body>
 </html>
